[gd_scene load_steps=9 format=2]

[ext_resource path="res://particle effects/small_round_particle.png" type="Texture" id=1]
[ext_resource path="res://particle effects/xsmall_round_particle.png" type="Texture" id=2]
[ext_resource path="res://creatures/player/abilities/stunbomb_projectile.gd" type="Script" id=3]
[ext_resource path="res://Audio/SFX/sfx_exp_short_hard13.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX/sfx_exp_shortest_soft3.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.497608, 1 )
colors = PoolColorArray( 0.603922, 0.941176, 0.537255, 1, 0.94902, 1, 0.4, 1, 1, 1, 1, 1 )

[node name="BombArea" type="Area2D"]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0313726, 0.333333, 0.384314, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
local_coords = false
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.15
linear_accel = -1000.0
color_ramp = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioImpact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
max_distance = 500.0

[node name="AudioLaunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_BombArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
